# sdl_snake

./: .gitignore  CMakeLists.txt  README.md  Read-me.txt
include/: Actor.h  Arrow.h  Board.h  Game.h  GameObject.h  Image.h  ImageGameObject.h  Pice.h  Scene.h  Types.h  main.h  util.h
src/: Actor.cpp  Arrow.cpp  Arrow.h  Board.cpp  Game.cpp  GameObject.cpp  Image.cpp  ImageGameObject.cpp  Pice.cpp  Scene.cpp  main.cpp  util.cpp
